--- a/index.html
+++ b/index.html
@@ -3,9 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script></script>
     <title>Clone Spotify</title>
 </head>
 <body>
-    
+    <div class="container">
+        <!--Menu Navegação-->
+        <nav>
+            <div>
+
+            </div>
+        </nav>
+
+        <main>
+
+        </main>
+    </div>
 </body>
 </html>
