--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <!--Kit FontAwesome-->
     <script src="https://kit.fontawesome.com/b74b0b1a19.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="styles.css">
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <title>Clone Spotify</title>
 </head>
 <body>
