Add promotional banner to index.html and update styles for improved visibility and interaction

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <!--Kit FontAwesome-->
     <script src="https://kit.fontawesome.com/b74b0b1a19.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="styles.css">
-    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="assets/spotify-brands.ico" type="image/x-icon">
     <title>Clone Spotify</title>
 </head>
 <body>
@@ -63,6 +63,13 @@
             </section>
 
         </main>
+    </div>
+    <div class="banner">
+        <div>
+            <h2>Testar o Premium de graça</h2>
+            <p>Inscreva-se para curtir músicas ilimitadas só com alguns anúncios. Não precisa de cartão de crédito</p>
+        </div>
+        <button>Inscreva-se Grátis</button>
     </div>
 </body>
 <script src="./script.js"></script>
